--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,5 +1,12 @@
-<div class="task">
-    <h4>{{task.text}} <i [ngStyle]="{'color': 'red'}" class="fa fa-times"></i></h4>
+<div class="task" 
+    [ngClass]="{reminder: task.reminder}"
+    (dblclick)="onToggle(task)"
+>
+    <h4>{{task.text}} 
+        <i 
+            [ngStyle]="{'color': 'red'}" class="fa fa-times" 
+            (click)="onDelete(task)">
+        </i>
+    </h4>
     <p>{{task.day}} </p>
-    
 </div>
